logs/validate.20260408-011255.log
Mode: isolate
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
error: unexpected token, expected `;`
   --> src/Chap37/BSTAVLMtEph.rs:722:29
    |
722 | ...                   by { if old_left.tree_contains(x) {} else { assert(x == value); } };
    |                       ^^

error[E0425]: cannot find type `BSTAVLMtEphInv` in this scope
    --> src/Chap37/BSTAVLMtEph.rs:1143:33
     |
1143 |     impl<T> std::fmt::Debug for BSTAVLMtEphInv<T> {
     |                                 ^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `BSTAVLMtEphInv` in this scope
    --> src/Chap37/BSTAVLMtEph.rs:1149:35
     |
1149 |     impl<T> std::fmt::Display for BSTAVLMtEphInv<T> {
     |                                   ^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `BSTAVLMtEph` in this scope
    --> src/Chap37/BSTAVLMtEph.rs:1157:45
     |
1157 |     impl<T: TotalOrder> std::fmt::Debug for BSTAVLMtEph<T> {
     |                                             ^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `TotalOrder` in this scope
    --> src/Chap37/BSTAVLMtEph.rs:1157:13
     |
1157 |     impl<T: TotalOrder> std::fmt::Debug for BSTAVLMtEph<T> {
     |             ^^^^^^^^^^ not found in this scope
     |
help: consider importing this trait
     |
  32 +     use crate::vstdplus::total_order::total_order::TotalOrder;
     |

error[E0425]: cannot find type `BSTAVLMtEph` in this scope
    --> src/Chap37/BSTAVLMtEph.rs:1163:47
     |
1163 |     impl<T: TotalOrder> std::fmt::Display for BSTAVLMtEph<T> {
     |                                               ^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `TotalOrder` in this scope
    --> src/Chap37/BSTAVLMtEph.rs:1163:13
     |
1163 |     impl<T: TotalOrder> std::fmt::Display for BSTAVLMtEph<T> {
     |             ^^^^^^^^^^ not found in this scope
     |
help: consider importing this trait
     |
  32 +     use crate::vstdplus::total_order::total_order::TotalOrder;
     |

error[E0425]: cannot find type `BSTAVLMtEph` in this scope
  --> src/Chap37/BSTSetAVLMtEph.rs:43:19
   |
43 |         pub tree: BSTAVLMtEph<T>,
   |                   ^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `BSTAVLMtEph` in this scope
   --> src/Chap37/BSTSetAVLMtEph.rs:143:38
    |
 42 |     pub struct BSTSetAVLMtEph<T: StTInMtT + Ord + TotalOrder> {
    |     --------------------------------------------------------- similarly named struct `BSTSetAVLMtEph` defined here
...
143 |         fn as_tree(&self) -> (tree: &BSTAVLMtEph<T>)
    |                                      ^^^^^^^^^^^
    |
help: a struct with a similar name exists
    |
143 |         fn as_tree(&self) -> (tree: &BSTSetAVLMtEph<T>)
    |                                         +++

error[E0425]: cannot find type `BSTAVLMtEph` in this scope
   --> src/Chap37/BSTSetAVLMtEph.rs:159:58
    |
 42 |     pub struct BSTSetAVLMtEph<T: StTInMtT + Ord + TotalOrder> {
    |     --------------------------------------------------------- similarly named struct `BSTSetAVLMtEph` defined here
...
159 |     fn values_vec<T: StTInMtT + Ord + TotalOrder>(tree: &BSTAVLMtEph<T>) -> (values: Vec<T>)
    |                                                          ^^^^^^^^^^^
    |
help: a struct with a similar name exists
    |
159 |     fn values_vec<T: StTInMtT + Ord + TotalOrder>(tree: &BSTSetAVLMtEph<T>) -> (values: Vec<T>)
    |                                                             +++

error[E0425]: cannot find type `BSTAVLMtEph` in this scope
   --> src/Chap37/BSTSetAVLMtEph.rs:181:83
    |
 42 |     pub struct BSTSetAVLMtEph<T: StTInMtT + Ord + TotalOrder> {
    |     --------------------------------------------------------- similarly named struct `BSTSetAVLMtEph` defined here
...
181 |     fn rebuild_from_vec<T: StTInMtT + Ord + TotalOrder>(values: Vec<T>) -> (tree: BSTAVLMtEph<T>)
    |                                                                                   ^^^^^^^^^^^
    |
help: a struct with a similar name exists
    |
181 |     fn rebuild_from_vec<T: StTInMtT + Ord + TotalOrder>(values: Vec<T>) -> (tree: BSTSetAVLMtEph<T>)
    |                                                                                      +++

error[E0425]: cannot find type `BSTAVLMtEph` in this scope
   --> src/Chap37/BSTSetAVLMtEph.rs:530:31
    |
 42 |     pub struct BSTSetAVLMtEph<T: StTInMtT + Ord + TotalOrder> {
    |     --------------------------------------------------------- similarly named struct `BSTSetAVLMtEph` defined here
...
530 |         fn as_tree(&self) -> &BSTAVLMtEph<T> { &self.tree }
    |                               ^^^^^^^^^^^
    |
help: a struct with a similar name exists
    |
530 |         fn as_tree(&self) -> &BSTSetAVLMtEph<T> { &self.tree }
    |                                  +++

error[E0433]: failed to resolve: use of undeclared type `BSTAVLMtEph`
   --> src/Chap37/BSTSetAVLMtEph.rs:184:24
    |
184 |         let mut tree = BSTAVLMtEph::new();
    |                        ^^^^^^^^^^^ use of undeclared type `BSTAVLMtEph`
    |
help: a struct with a similar name exists
    |
184 |         let mut tree = BSTSetAVLMtEph::new();
    |                           +++

error[E0433]: failed to resolve: use of undeclared type `BSTAVLMtEph`
   --> src/Chap37/BSTSetAVLMtEph.rs:216:23
    |
216 |                 tree: BSTAVLMtEph::new(),
    |                       ^^^^^^^^^^^ use of undeclared type `BSTAVLMtEph`
    |
help: a struct with a similar name exists
    |
216 |                 tree: BSTSetAVLMtEph::new(),
    |                          +++

error[E0433]: failed to resolve: use of undeclared type `BSTAVLMtEph`
   --> src/Chap37/BSTSetAVLMtEph.rs:222:28
    |
222 |             let mut tree = BSTAVLMtEph::new();
    |                            ^^^^^^^^^^^ use of undeclared type `BSTAVLMtEph`
    |
help: a struct with a similar name exists
    |
222 |             let mut tree = BSTSetAVLMtEph::new();
    |                               +++

error[E0433]: failed to resolve: use of undeclared type `BSTAVLMtEph`
   --> src/Chap37/BSTSetAVLMtEph.rs:416:28
    |
416 |             let mut tree = BSTAVLMtEph::new();
    |                            ^^^^^^^^^^^ use of undeclared type `BSTAVLMtEph`
    |
help: a struct with a similar name exists
    |
416 |             let mut tree = BSTSetAVLMtEph::new();
    |                               +++

error[E0433]: failed to resolve: use of undeclared type `BSTAVLMtEph`
   --> src/Chap37/BSTSetAVLMtEph.rs:448:28
    |
448 |             let mut tree = BSTAVLMtEph::new();
    |                            ^^^^^^^^^^^ use of undeclared type `BSTAVLMtEph`
    |
help: a struct with a similar name exists
    |
448 |             let mut tree = BSTSetAVLMtEph::new();
    |                               +++

error: aborting due to 17 previous errors

Some errors have detailed explanations: E0405, E0425, E0433.
For more information about an error, try `rustc --explain E0405`.
Elapsed: 5s
Sampled Memory Usage: peak rust_verify RSS: 4538MB, peak z3 RSS: 0MB, min free: 20880MB
Sampled CPU Usage: rust_verify: 117s, z3 children: 79s
